Compiler/src/main/java/Testing/Tests/LexicalTests/failing/InvalidSymbol.ru
/? Simbolo que no pertenece al alfabeto
/? Error, simbolo invalido
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 5 | COLUMNA 1 | ERROR SIMBOLO NO VALIDO: EL SIMBOLO DEFINIDO NO ES PARTE DEL ALFABETO ¬
¬¬
